Migrate all the usage of com.google.common.collect.ImmutableList to java.util.List (#17101)
Enforce checkstyle failure for com.google.common.collect.ImmutableList